--- a/dev/installation/index.html
+++ b/dev/installation/index.html
@@ -12,23 +12,38 @@ julia&gt; Pkg.add(&quot;EasyJobs&quot;)</code></pre></li><li><p>Run</p><pre><cod
      Cloning git-repo `https://github.com/MineralsCloud/EasyJobs.jl`
     Updating git-repo `https://github.com/MineralsCloud/EasyJobs.jl`
    Resolving package versions...
-   Installed ReusePatterns ─ v0.3.0
-   Installed Combinatorics ─ v1.0.2
     Updating `~/work/EasyJobs.jl/EasyJobs.jl/docs/build/developers/Project.toml`
   [66d786ec] + EasyJobs v0.1.0 `https://github.com/MineralsCloud/EasyJobs.jl#main`
     Updating `~/work/EasyJobs.jl/EasyJobs.jl/docs/build/developers/Manifest.toml`
   [861a8166] + Combinatorics v1.0.2
+⌅ [34da2185] ↓ Compat v4.2.0 ⇒ v3.46.0
+  [9a962f9c] + DataAPI v1.10.0
+  [a93c6f00] + DataFrames v1.3.4
+  [e2d170a0] + DataValueInterfaces v1.0.0
   [66d786ec] + EasyJobs v0.1.0 `https://github.com/MineralsCloud/EasyJobs.jl#main`
+  [59287772] + Formatting v0.4.2
+  [41ab1584] + InvertedIndices v1.1.0
+  [82899510] + IteratorInterfaceExtensions v1.0.0
+  [e1d29d7a] + Missings v1.0.2
+  [2dfb63ee] + PooledArrays v1.4.2
+  [08abe8d2] + PrettyTables v1.3.1
+  [189a3867] + Reexport v1.2.2
   [a39b5e78] + ReusePatterns v0.3.0
+  [a2af1166] + SortingAlgorithms v1.0.1
+  [3783bdb8] + TableTraits v1.0.1
+  [bd369af6] + Tables v1.7.0
+  [8bb1440f] + DelimitedFiles
+  [8ba89e20] + Distributed
+  [9fa8497b] + Future
+  [1a1011a3] + SharedArrays
   [2f01184e] + SparseArrays
   [10745b16] + Statistics
   [8dfed614] + Test
+        Info Packages marked with ⌅ have new versions available but cannot be upgraded. To see why use `status --outdated -m`
 Precompiling project...
-<span class="sgr32">  ✓ </span><span class="sgr90">Combinatorics</span>
-<span class="sgr32">  ✓ </span><span class="sgr90">ReusePatterns</span>
-<span class="sgr91">  ✗ </span>EasyJobs
-  2 dependencies successfully precompiled in 2 seconds. 17 already precompiled.
-  <span class="sgr91">1</span> dependency errored. To see a full report either run `import Pkg; Pkg.precompile()` or load the package</code></pre><p>in the second step above.</p><h2 id="Update-EasyJobs"><a class="docs-heading-anchor" href="#Update-EasyJobs">Update <code>EasyJobs</code></a><a id="Update-EasyJobs-1"></a><a class="docs-heading-anchor-permalink" href="#Update-EasyJobs" title="Permalink"></a></h2><p>Please <a href="https://docs.github.com/en/account-and-profile/managing-subscriptions-and-notifications-on-github/setting-up-notifications/configuring-notifications#configuring-your-watch-settings-for-an-individual-repository">watch</a> our <a href="https://github.com/MineralsCloud/EasyJobs.jl">GitHub repository</a> for new releases. Once we release a new version, you can update <code>EasyJobs</code> by typing</p><pre><code class="language-julia-repl hljs" style="display:block;">julia&gt; using Pkg</code><code class="nohighlight hljs ansi" style="display:block;"></code><br/><code class="language-julia-repl hljs" style="display:block;">julia&gt; Pkg.update(&quot;EasyJobs&quot;)</code><code class="nohighlight hljs ansi" style="display:block;">    Updating registry at `~/.julia/registries/General`
+<span class="sgr33">  ✓ </span>EasyJobs
+  1 dependency successfully precompiled in 3 seconds. 32 already precompiled.
+  <span class="sgr33">1</span> dependency precompiled but a different version is currently loaded. Restart julia to access the new version</code></pre><p>in the second step above.</p><h2 id="Update-EasyJobs"><a class="docs-heading-anchor" href="#Update-EasyJobs">Update <code>EasyJobs</code></a><a id="Update-EasyJobs-1"></a><a class="docs-heading-anchor-permalink" href="#Update-EasyJobs" title="Permalink"></a></h2><p>Please <a href="https://docs.github.com/en/account-and-profile/managing-subscriptions-and-notifications-on-github/setting-up-notifications/configuring-notifications#configuring-your-watch-settings-for-an-individual-repository">watch</a> our <a href="https://github.com/MineralsCloud/EasyJobs.jl">GitHub repository</a> for new releases. Once we release a new version, you can update <code>EasyJobs</code> by typing</p><pre><code class="language-julia-repl hljs" style="display:block;">julia&gt; using Pkg</code><code class="nohighlight hljs ansi" style="display:block;"></code><br/><code class="language-julia-repl hljs" style="display:block;">julia&gt; Pkg.update(&quot;EasyJobs&quot;)</code><code class="nohighlight hljs ansi" style="display:block;">    Updating registry at `~/.julia/registries/General`
     Updating git-repo `https://github.com/JuliaRegistries/General.git`
     Updating git-repo `https://github.com/MineralsCloud/EasyJobs.jl`
   No Changes to `~/work/EasyJobs.jl/EasyJobs.jl/docs/build/developers/Project.toml`
@@ -39,4 +54,4 @@ Precompiling project...
 
 julia&gt; Pkg.rm(&quot;EasyJobs&quot;)
 
-julia&gt; Pkg.gc()</code></pre></li><li><p>Press <code>ctrl+d</code> to quit the current session. Start a new Julia session and reinstall <code>EasyJobs</code>.</p></li></ol></article><nav class="docs-footer"><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.22 on <span class="colophon-date" title="Thursday 25 August 2022 23:39">Thursday 25 August 2022</span>. Using Julia version 1.8.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+julia&gt; Pkg.gc()</code></pre></li><li><p>Press <code>ctrl+d</code> to quit the current session. Start a new Julia session and reinstall <code>EasyJobs</code>.</p></li></ol></article><nav class="docs-footer"><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.22 on <span class="colophon-date" title="Thursday 25 August 2022 23:50">Thursday 25 August 2022</span>. Using Julia version 1.8.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
